fix(STN-507): decrease accordion spacing

--- a/docroot/themes/humsci/humsci_basic/src/scss/objects/_layouts.general.scss
+++ b/docroot/themes/humsci/humsci_basic/src/scss/objects/_layouts.general.scss
@@ -47,3 +47,12 @@
 .views-row:not(:last-child) {
   margin-bottom: hb-spacing-width() !important;
 }
+
+.ptype-hs-accordion {
+  margin-bottom: hb-spacing-width(xxs) !important;
+
+  .hs-paragraph-style--well &:last-child,
+  .hs-paragraph-style--well-full-width &:last-child {
+    margin-bottom: hb-spacing-width() !important;
+  }
+}
